After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 729426 - Should respond "551 Option not supported" in case a Require header is received
Should respond "551 Option not supported" in case a Require header is received
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-rtsp-server
git master
Other All
: Normal normal
: 1.3.2
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-05-02 20:12 UTC by Tim-Philipp Müller
Modified: 2014-05-09 13:02 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
rtsp-client: handle Require headers and respond with OPTION_NOT_SUPPORTED (4.37 KB, patch)
2014-05-02 20:12 UTC, Tim-Philipp Müller
committed Details | Review
tests: add unit test for correct handling of Require headers (8.00 KB, patch)
2014-05-02 20:14 UTC, Tim-Philipp Müller
committed Details | Review

Description Tim-Philipp Müller 2014-05-02 20:12:21 UTC
Created attachment 275697 [details] [review]
rtsp-client: handle Require headers and respond with OPTION_NOT_SUPPORTED

RFC 2326, https://tools.ietf.org/html/rfc2326#section-12.32 , states:

> 12.32 Require
>
> The Require header is used by clients to query the server about
> options that it may or may not support. The server MUST respond to
> this header by using the Unsupported header to negatively acknowledge
> those options which are NOT supported.

We don't do this currently.

Attached patch fixes this.

One might allow the application to decide what options are supported or not. Not sure how interesting this is.
Comment 1 Tim-Philipp Müller 2014-05-02 20:14:12 UTC
Created attachment 275698 [details] [review]
tests: add unit test for correct handling of Require headers
Comment 2 Tim-Philipp Müller 2014-05-09 13:02:32 UTC
commit aec1b42c4e59ad548a3d39b561c775fc19eaa776
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Fri May 2 20:06:29 2014 +0100

    tests: add unit test for correct handling of Require headers
    
    https://bugzilla.gnome.org/show_bug.cgi?id=729426

commit efd079546ae736d0e20891acd126fe1ec7e116d2
Author: Tim-Philipp Müller <tim@centricular.com>
Date:   Fri May 2 19:59:23 2014 +0100

    rtsp-client: handle Require headers and respond with OPTION_NOT_SUPPORTED
    
    Servers must handle Require headers and must report a failure
    if they don't handle any of the Required options, see RFC 2326,
    section 12.32: https://tools.ietf.org/html/rfc2326#page-54
    
    https://bugzilla.gnome.org/show_bug.cgi?id=729426